<resources>
    <string name="app_name">Yourney</string>
    <string name="duracion">Duración:</string>
    <string name="velocidad">Velocidad:</string>
    <string name="distancia">Distancia:</string>
    <string name="aviso">Aviso:</string>
    <string name="ubicacionPermisosDenegados">Los permisos de ubicación son necesarios para poder grabar nuecas rutas.</string>
    <string name="pasos">Pasos:</string>
    <string name="calorias">Calorias (kcal):</string>
    <string name="publico">Público</string>
    <string name="privado">Privado</string>
    <string name="titulo">Título</string>
    <string name="guardar">Guardar</string>
    <string name="str0">Ya tengo cuenta</string>
    <string name="str1">Crear cuenta</string>
    <string name="str2">Iniciar sesión</string>
    <string name="str3">Usuario</string>
    <string name="str4">Contraseña</string>
    <string name="str5">Repetir contraseña</string>
    <string name="str6">Seleccionar imagen</string>
    <string name="str7">Tomar foto</string>
    <string name="str8">Abrir galería</string>
    <string name="str9">Hay campos vacíos o las contraseñas no coinciden</string>
    <string name="str10">La dirección de email no es válido</string>
    <string name="editar">Editar</string>
    <string name="fotos">Fotos</string>
    <string name="otros">Otros</string>
    <string name="dificultad">Dificultad</string>
    <string name="facil">Fácil</string>
    <string name="medio">Medio</string>
    <string name="dificil">Difícil</string>
    <string name="infoExtra">Información Extra</string>
    <string name="visibilidad">Visibilidad</string>
    <string name="prefs_idioma">Idioma de la aplicación</string>
    <string name="descargar">Descargar</string>
    <string name="descargaCorrecta">Imágenes descargadas correctamente.</string>
    <string name="anadir">Añadir</string>
    <string name="eliminar">Eliminar</string>
    <string name="ruta">RUTA</string>
    <string name="añadirEditor">Añadir Editores</string>
    <string name="nav_open">Abrir</string>
    <string name="nav_close">Cerrar</string>
    <string name="str11">¡Bienvenido otra vez! Prepara tus zapatos y cámara, ¡estás a punto de explorar el mundo de nuevo!</string>
    <string name="str12">Registreate o inicia sesion para poder disfrutar y compartir aventuras increibles al aire libre</string>
    <string name="str13">Nombre</string>
    <string name="str14">Apellido</string>
    <string name="str15">Puedes añadir una foto de perfil haciendo click sobre la imagen</string>
    <string name="rutasFavoritas">Tus rutas favoritas a un solo click</string>
    <string name="login_incorrecto">Credenciales incorrectas</string>
    <string name="login_correcto">¡Hola de nuevo</string>
    <string name="registro_incorrecto">El usuario introducido ya existe</string>
    <string name="registro_correcto">¡Bienvenido</string>
    <string name="buscarUsuarios">Buscar usuarios</string>
    <string name="galeria">Galería de imágenes</string>
    <string name="enviar">Enviar</string>
    <string name="mensaje">Mensaje</string>
    <string name="peticion_incorrecta">Petición incorrecta</string>
    <string name="grabando">Grabando ruta</string>

    <string name="editar_nombre_usuario">Nombre de Usuario</string>
    <string name="editar_nombre">Nombre</string>
    <string name="editar_apellido">Apellido</string>
    <string name="editar_email">Correo electrónico</string>
    <string name="editar_contrasenia">Contraseña</string>
    <string name="descr_rutas">Aquí están las rutas que has creado o en las que has participado a lo largo del tiempo en tu viaje</string>
    <string name="mis_rutas">Mis Rutas</string>
    <string name="perfil">Perfil</string>
    <string name="preferencias">Preferencias</string>
    <string name="msg_cerrar_sesion">¿Estás seguro de que quieres cerrar sesión y salir?</string>
    <string name="si">Sí</string>
    <string name="buscar_rutas">Buscar rutas</string>
    <string name="rutas_favoritas">Rutas Favoritas</string>
    <string name="crear_ruta">Crear Ruta</string>
    <string name="mis_amigos">Mis Amigos</string>
    <string name="solicitudes_amistad">Solicitudes de Amistad</string>
    <string name="rutas">Rutas</string>
    <string name="amigos">Amigos</string>
    <string name="configuracion">Configuración</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="msg_aceptar_solicitud">¿Aceptas las solicitud amistad?</string>
    <string name="cancelar_edicion">¿Estás seguro de que quieres salir? Perderás los cambios guardados</string>
    <string name="placeholder">Vaya, parece que todavía no hay nada aquí...</string>
    <string name="campos_vacios">Existen campos vacíos</string>
    <string name="mensaje_error_peti">No puedes enviarte solicitudes de amistad a ti mismo</string>
    <string name="username">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="peticion">Enviar petición de amistad</string>
    <string name="imagen">Imagen</string>
    <string name="editar_ruta">Editar ruta</string>
    <string name="esperando">Esperando a grabar</string>
    <string name="galeria1">Esta es la galería de imágenes de tu ruta.</string>
    <string name="galeria2">Desde aquí puedes añadir nuevas fotos o descargar el álbum entero.</string>
    <string name="rutas_publicas">Rutas públicas</string>
    <string name="mis_editores">Mis editores</string>
    <string name="solicitud_enviada">Solicitud de amistad enviada!</string>
    <string name="salir_grabar">¿Estás seguro de que desea salir?</string>
    <string name="salir_grabar2">Se perderá la grabación de la ruta</string>
    <string name="enviar_peticion">Petición de amistad</string>
    <string name="existe_amistad_peticion">Ya existe una petición o ya eres amigo con este usuario</string>
    <string name="comienzo">Comienzo</string>
    <string name="fin">Fin</string>
    <string name="mis_solicitudes">Mis solicitudes de amistad</string>
    <string name="error_conexión">ERROR DE CONEXIÓN: Comprueba el estado de tu conexión a internet</string>

</resources>