<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/usuarioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/username"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/usuarioEdit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/mensajeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/mensaje"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/mensajeEdit"
        android:lines="8"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_width="250dp"
        android:layout_height="192dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/mensaje"/>

    <Button
        android:id="@+id/btn_enviarSolicitud"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/enviar" />


</LinearLayout>