<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfil">

    <View
        android:id="@+id/green_rectangle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/cabecera"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/apellido"
        style="@style/f_gO_m"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:background="@drawable/edittext_rounded_background"
        android:hint="@string/editar_apellido"
        android:paddingLeft="10dp"
        android:textColorHint="#636363"
        app:layout_constraintBottom_toBottomOf="@+id/distanciaRText"
        app:layout_constraintEnd_toEndOf="@+id/nombre"
        app:layout_constraintTop_toTopOf="@+id/distanciaRText" />

    <EditText
        android:id="@+id/email"
        style="@style/f_gO_m"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:background="@drawable/edittext_rounded_background"
        android:hint="@string/editar_email"
        android:paddingLeft="10dp"
        android:textColorHint="#636363"
        app:layout_constraintBottom_toBottomOf="@+id/pasosRText"
        app:layout_constraintEnd_toEndOf="@+id/contrasenia"
        app:layout_constraintTop_toTopOf="@+id/pasosRText" />

    <EditText
        android:id="@+id/contrasenia"
        style="@style/f_gO_m"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:background="@drawable/edittext_rounded_background"
        android:hint="@string/editar_contrasenia"
        android:paddingLeft="10dp"
        android:textColorHint="#636363"
        app:layout_constraintBottom_toBottomOf="@+id/velocidadRText"
        app:layout_constraintEnd_toEndOf="@+id/apellido"
        app:layout_constraintTop_toTopOf="@+id/velocidadRText" />

    <Button
        android:id="@+id/btnGuardarEditarUsuario"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/round_btn_verde"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/guardar"
        android:onClick="update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/fotoAmigo1"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:elevation="12dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/green_rectangle">

        <ImageView
            android:id="@+id/fotoPerfilEditarPerfil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="setFotopPerfil"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/perfil" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/duracionRText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duracionRText"
        tools:ignore="NotSibling" />

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/fotoAmigo1"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/distanciaRText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/apellido"
        app:layout_constraintStart_toStartOf="@+id/duracionRText"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/distanciaRText" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/velocidadRText" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/pasosRText" />

    <TextView
        android:id="@+id/velocidadRText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/editar_contrasenia"
        app:layout_constraintStart_toStartOf="@+id/distanciaRText"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/pasosRText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/velocidadRText"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <EditText
        android:id="@+id/nombre"
        style="@style/f_gO_m"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:background="@drawable/edittext_rounded_background"
        android:hint="@string/editar_nombre"
        android:paddingLeft="10dp"
        android:textColorHint="#636363"
        app:layout_constraintBottom_toBottomOf="@+id/duracionRText"
        app:layout_constraintEnd_toEndOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/duracionRText" />


</androidx.constraintlayout.widget.ConstraintLayout>